[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cosmos-gcp"
version = "0.0.1"
description = "GCP test package"
requires-python = ">=3.10"

[project.scripts]
cosmos-gcp = "cosmos_gcp:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

